# fantom-ledger

./: .gitignore  Makefile  README.md  prepare-devenv.sh
doc/: app-design.md  app_design.md  cmd_app_version.md  cmd_get_address.md  cmd_get_pubkey.md  cmd_sign_tx.md
fuzzing/: CMakeLists.txt  fuzztest.c  os_mocks.c  readme.md
fuzzing/ref_corpus/: valid_tx
src/: address_utils.c  address_utils.h  assert.c  assert.h  big_endian_io.h  bip44.c  bip44.h  common.h  conf.h  derive_key.c  derive_key.h  errors.h  get_address.c  get_address.h  get_pub_key.c  get_pub_key.h  get_tx_sign.c  get_tx_sign.h  get_version.c  get_version.h  handlers.c  handlers.h  io.c  io.h  main.c  main.h  menu.c  menu.h  policy.c  policy.h  rlp_utils.c  rlp_utils.h  state.c  state.h  transaction.c  transaction.h  tx_stream.c  tx_stream.h  ui_basic_flows.c  ui_flows.c  (+7 more)
test/: get_address.py  get_public_key.py  get_version.py
